--- a/themes/docsy/assets/scss/_nav.scss
+++ b/themes/docsy/assets/scss/_nav.scss
@@ -28,6 +28,7 @@
   background: $primary;
   min-height: 4rem;
   margin: 0;
+  margin-bottom: 2rem;
   z-index: 32;
 
   .navbar-brand {
@@ -97,7 +98,7 @@
       // Adapted from: https://github.com/twbs/bootstrap/blob/main/site/layouts/_default/examples.html
       width: 1em;
       height: 1em;
-      vertical-align: -.125em;
+      vertical-align: -0.125em;
       fill: currentcolor;
     }
 
