--- a/themes/docsy/layouts/partials/footer.html
+++ b/themes/docsy/layouts/partials/footer.html
@@ -18,31 +18,33 @@
       <div class="td-footer__center col-6 col-sm-3 order-sm-3">
         <h5>Contact Us</h5>
         <ul class="list-unstyled">
-          <li><i class="fas fa-envelope"></i> <a href="mailto:contact@doxa.com">contact@doxa.com</a></li>
-          <li><i class="fas fa-map-marker-alt"></i> Location: Global</li>
+          <li><i class="fas fa-envelope"></i> <a
+              href="mailto:doxadaooperations@gmail.com">doxadaooperations@gmail.com</a></li>
+          <li><i class="fas fa-globe"></i> <a href="https://www.doxadao.org/" target="_blank">www.doxadao.org</a></li>
         </ul>
       </div>
       <div class="td-footer__right col-6 col-sm-3 order-sm-4">
         <h5>Follow Us</h5>
         <ul class="list-inline social-buttons">
           <li class="list-inline-item">
-            <a href="https://twitter.com/doxa" target="_blank">
+            <a href="https://twitter.com/DoxaUSD?t=Wq2e3fcxhzAngSZ5Pve9ww&s=09" target="_blank" rel="noopener">
               <i class="fab fa-twitter"></i>
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="https://github.com/doxa" target="_blank">
-              <i class="fab fa-github"></i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="https://discord.gg/doxa" target="_blank">
+            <a href="https://discord.gg/zmUArkqy" target="_blank" rel="noopener">
               <i class="fab fa-discord"></i>
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="https://t.me/doxa" target="_blank">
-              <i class="fab fa-telegram"></i>
+            <a href="https://github.com/DoxaFoundation/doxa-v3" target="_blank" rel="noopener">
+              <i class="fab fa-github"></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://oc.app/community/4opco-piaaa-aaaaf-bmytq-cai/?ref=luvob-jqaaa-aaaar-aymqa-cai"
+              target="_blank" rel="noopener">
+              <i class="fas fa-users"></i>
             </a>
           </li>
         </ul>
